<resources>
    <string name="app_name">Fluencetest</string>
    <string name="main_activity">Main Activity</string>
    <string name="activity_exercices">ActivityExercices</string>
    <string name="jouer">Jouer</string>
    <string name="accueil">Accueil</string>
    <string name="bibliothèque">Bibliothèque</string>
    <string name="retour">Retour</string>
    <string name="activity_bibliotheque">ActivityBibliotheque</string>
    <string name="exercice1">Exercice 1</string>
    <string name="activity_exercice1">ActivityExercice1</string>
    <string name="valider">Valider</string>
    <string name="activity_valider">activity_valider</string>
    <string name="dromadaire">dromadaire</string>
    <string name="koala">koala</string>
    <string name="pelican">pelican</string>
    <string name="chameau">chameau</string>
    <string name="est_ce_que_les_mots_sont_les_m_mes">Est-ce que les mots sont les mêmes ?</string>
    <string name="oui">oui</string>
    <string name="pour_cet_exercice_regardes_si_les_mots_sont_les_m_mes">Pour cet exercice, regardes si les mots sont les mêmes !</string>
    <string name="non">non</string>
    <string name="bravo_tu_as_r_ussi">Bravo ! Tu as réussi !</string>
    <string name="dommage_r_essaye_encore">Dommage... Réessaye encore !</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="t_1">T[1]</string>
    <string name="chamau">chamau</string>
    <string name="juste">juste</string>
    <string name="faux3">faux3</string>
    <string name="faux2">faux2</string>
    <string name="faux1">faux1</string>
    <string name="juste3">juste3</string>
    <string name="juste2">juste2</string>
    <string name="juste1">juste1</string>
    <string name="bulle">bulle</string>
    <string name="fond">fond</string>
    <string name="bienvenue_sur_notre_application_ici_tu_pourras_apprendre_en_t_amusant">Bienvenue sur notre application ! Ici, tu pourras apprendre en t\'amusant !</string>
    <string name="fond_jaune">fond jaune</string>
    <string name="cadre_rouge">cadre rouge</string>
    <string name="fluence">fluence</string>
    <string name="FLUENCE">FLUENCE</string>
    <string name="Bureau_du_prof">Bureau du prof</string>
    <string name="Paramètres">Parametres</string>
    <string name="_10">10</string>
    <string name="sur_10">sur 10</string>
    <string name="Voici_ton_score">voici ton score</string>
    <string name="Bien_joué">bien joue</string>
    <string name="Bien_joue">Bien joué</string>
    <string name="voici_ton_score">Voici ton score</string>
    <string name="Bien_Joue">Bien joué !</string>
    <string name="Voir_resultats">Voir mes résultats</string>
    <string name="suite">Suite</string>
</resources>