<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:text="@string/retour"
        android:backgroundTint="#BAC1FF"
        android:textColor="#CE1010"
        android:background="#FCFF7E"
        tools:context=".MainActivity" >


    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginBottom="539dp"
        android:textSize="40px" />

    <TextView
        android:id="@+id/mot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/mot2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="271dp"
        android:text="@string/chameau"
        android:textSize="45sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:layout_above="@+id/mot2"
        android:layout_centerHorizontal="true"
        android:id="@+id/text3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:layout_above="@+id/mot2"
        android:layout_centerHorizontal="true"
        android:id="@+id/text2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_above="@+id/mot2"
        android:layout_centerHorizontal="true"
        android:id="@+id/text1"/>

    <TextView
        android:id="@+id/mot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/mot2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="0dp"
        android:text="@string/chameau"
        android:textSize="45sp" />


</RelativeLayout>