<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFF7E"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/jouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/retour"
        android:backgroundTint="#BAC1FF"
        android:textColor="#CE1010"
        android:textSize="40px"/>


    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="#BAC1FF"
        android:textColor="#CE1010"
        android:textSize="40px"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="176dp"
        android:text="@string/pour_cet_exercice_regardes_si_les_mots_sont_les_m_mes"
        android:textSize="20sp" />

</RelativeLayout>